--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ hiredis==0.2.0
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
-MySQL-python==1.2.5
+pymysql
 redis-trib>=0.5.0
 retrying==1.3.3
 six==1.9.0
